# Projects

./: README.md  report.xlsx
AI_Projects/: handwritten_text_recognition.py
Apps/ARApp/ARApp/: AppDelegate.swift  ViewController.swift
Apps/ARApp/ARApp.xcodeproj/: project.pbxproj
Apps/PlusOne/: Podfile
Apps/PlusOne/PlusOne/: AppDelegate.swift  GameViewController.swift  HighScoreViewController.swift  Info.plist  InstructionsViewController.swift  SceneDelegate.swift  ViewController.swift
Apps/PlusOne/PlusOne.xcodeproj/: project.pbxproj
Apps/PlusOne/PlusOne.xcworkspace/: contents.xcworkspacedata
C_Programming/CSourceCode/: README.txt
C_Programming/C_Projects/: rock_paper_scissor.c
C_Programming/section_2/: helloworld  helloworld.c  helloworld_again  helloworld_again.c
C_Programming/section_3/: constants  constants.c  intAndFloat  intAndFloat.c  learnVar  learnVar.c
Games/NinjaArena/: Bullet.cpp  Bullet.h  CMakeLists.txt  CreateBackground.cpp  CreateHorde.cpp  Enemy.cpp  Enemy.h  EnemyPickup.cpp  EnemyPickup.h  NinjaArena.h  Pickup.cpp  Pickup.h  Player.cpp  Player.h  TextureHolder.cpp  TextureHolder.h  main.cpp
Games/PongLabs/: Ball.cpp  Ball.h  CMakeLists.txt  Paddle.cpp  Paddle.h  PowerUp.cpp  PowerUp.h  main.cpp
Games/Python/: snake.py
Games/Python/Snake/: constants.py  food.py  main.py  snake.py
Games/Space Invaders ++ 2/: BitmapStore.cpp  BitmapStore.h  BlueprintObjectParser.cpp  BlueprintObjectParser.h  BulletSpawner.h  BulletUpdateComponent.cpp  BulletUpdateComponent.h  Button.cpp  Button.h  CMakeLists.txt  ColliderComponent.h  GameEngine.cpp  GameEngine.h  GameInputHandler.cpp  GameInputHandler.h  GameObject.cpp  GameObject.h  GameObjectBlueprint.h  GameObjectFactoryPlayMode.cpp  GameObjectFactoryPlayMode.h  GameOverInputHandler.cpp  GameOverInputHandler.h  GameOverUIPanel.cpp  GameOverUIPanel.h  GameScreen.cpp  GameScreen.h  GameUIPanel.cpp  GameUIPanel.h  GraphicsComponent.h  InputHandler.cpp  InputHandler.h  InvaderUpdateComponent.cpp  InvaderUpdateComponent.h  LevelManager.cpp  LevelManager.h  ObjectTags.cpp  PhysicsEnginePlayMode.cpp  PhysicsEnginePlayMode.h  PlayerUpdateComponent.cpp  PlayerUpdateComponent.h  (+10 more)
Games/Space Invaders ++ 2/world/: level1
Games/TWL/: Bob.cpp  Bob.h  CMakeLists.txt  DetectCollisions.cpp  Draw.cpp  Engine.cpp  Engine.h  HUD.cpp  HUD.h  Input.cpp  LevelManager.cpp  LevelManager.h  LoadLevel.cpp  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  PlayableCharacter.cpp  PlayableCharacter.h  PopulateEmitters.cpp  SoundManager.cpp  SoundManager.h  TextureHolder.cpp  TextureHolder.h  Thomas.cpp  Thomas.h  Update.cpp  main.cpp
Games/TWL/levels/: level1.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt
Games/TWL/shaders/: rippleShader.frag
Games/Timber/: CMakeLists.txt  main.cpp
Phone_Apps/MoonRunner-starter/MoonRunner/: AppDelegate.swift
Phone_Apps/MoonRunner-starter/MoonRunner.xcodeproj/: project.pbxproj
Phone_Apps/RunningPaceCalculator/: App.js  app.json  babel.config.js  package-lock.json  package.json
Phone_Apps/RunningPaceCalculator/android/: settings.gradle
Phone_Apps/RunningPaceCalculator/ios/: Podfile
Python_Projects/100DaysOfPython/Day1/: bandNameGenerator.py  bmiCalc.py  mathOp.py  numManipulation.py  printLesson.py
Python_Projects/100DaysOfPython/Day2/: lifeInWeeks.py  primData.py  tipCalculator.py
Python_Projects/100DaysOfPython/Day3/: .$loveCalculator.drawio.bkp  .$treasureIsland.drawio.bkp  .$treasureIsland.drawio.dtmp  bmiPartTwo.py  leapYear.drawio  leapYear.py  loveCalculator.drawio  loveCalculator.py  oddOrEven.py  pythonPizza.drawio  pythonPizza.py  rollerCoaster.py  treasureIsland.drawio  treasureIsland.py
Python_Projects/100DaysOfPython/Day4/: banker_roulette.py  coin_flip.py  learnLists.py  randomisation.py
Python_Projects/Database_projects/: reportGenerator.py
Python_Projects/leetcodeAnswers/: TwoSums.py  binarySearch.py  carFleet.py  concatenation_array.py  containsDup.py  dailyTemp.py  findNums.py  genParenthesis.py  groupAnagram.py  isAnagram.py  isSubsequence.py  longSubstring.py  prodOfArrayExceptSelf.py  replace_elements.py  reverseArray.py  sumRepeatedWords.py  targetIndex.py  threeSum.py  topKFreqElements.py  twoSumII.py
Python_Projects/meta_practice/: contiguous_subarrays.py  wrong_answers.py
Python_Projects/retailApp/: helper.py  item.py  keyboard.py  phone.py  poly_explain.py  retailApp.py
Rust_Programs/hello_world/src/: main.rs
WatsonX_Challenge/Test/: rand_gen.py  rand_gen_sum.py
Web_Apps/: content_agg.py
Web_Apps/ht-request-tool/: ht_request.html  package-lock.json  script.js  server.js  styles.css
Web_Apps/metis-reservation-app/: package-lock.json  package.json
Web_Apps/taskapp/: db.sqlite3
(+268 files in other folders)
